java uses ProcessBuilder to call docker with enumhyp for generate and enumerate.