@@ -3,13 +3,14 @@ package at.univie.federated;
 
 import java.io.*;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
 public class EnumhypRunner {
 
     private final String dockerImage;
-    private final Path dataDir; // mounted with -v host:data
+    private final Path dataDir;      // mounted with -v host:data
 
     /**
      * @param dockerImage  name of docker image, e.g. "enumhyp-ubuntu"
@@ -21,8 +22,7 @@ public class EnumhypRunner {
     }
 
     /**
-     * Build and run:
-     *
+     * Build and run: enumhyp project in docker container
      * docker run --rm -v hostDataDir:/data image args...
      */
     private int runEnumhypDocker(List<String> enumhypArgs) throws IOException, InterruptedException {
@@ -42,6 +42,8 @@ public class EnumhypRunner {
 
         // add enumhyp command and args
         command.addAll(enumhypArgs);
+
+        System.out.println(command.toString());
 
         ProcessBuilder pb = new ProcessBuilder(command);
         pb.redirectErrorStream(true);
@@ -72,34 +74,26 @@ public class EnumhypRunner {
     /**
      * Calls:
      * docker run ... enumhyp-ubuntu generate /data/input.csv
+     * output:  Path to generated .graph file
      */
     public void generate(Path csvFile) throws IOException, InterruptedException {
+
+        String graphName = csvFile.getFileName().toString().replace(".csv", "_ucc.graph");
+        System.out.println("Generating " + graphName);
+
         List<String> args = List.of(
                 "generate",
-                "/data/" + csvFile.getFileName().toString()
+                "/data/" + csvFile.getFileName().toString(),
+                "-o",
+                "/data/" + graphName
         );
 
-        runEnumhypDocker(args);
+        System.out.println(runEnumhypDocker(args));
     }
 
     /**
      * Calls:
-     *   docker run ... enumhyp-ubuntu enumerate /data/graphFile
-     *
-     * Without -o
-     */
-    public void enumerate(Path graphFile) throws IOException, InterruptedException {
-        List<String> args = List.of(
-                "enumerate",
-                "/data/" + graphFile.getFileName().toString()
-        );
-
-        runEnumhypDocker(args);
-    }
-
-    /**
-     * Calls:
-     *   docker run ... enumhyp-ubuntu enumerate /data/graphFile -o /data/outputFile
+     * docker run ... enumhyp-ubuntu enumerate /data/graphFile -o /data/outputFile
      */
     public void enumerate(Path graphFile, Path outputFile) throws IOException, InterruptedException {
         List<String> args = List.of(
@@ -109,7 +103,7 @@ public class EnumhypRunner {
                 "/data/" + outputFile.getFileName().toString()
         );
 
-        runEnumhypDocker(args);
+        System.out.println(runEnumhypDocker(args));
     }
 
     /**
@@ -125,7 +119,7 @@ public class EnumhypRunner {
     public static EnumhypRunner fromDefaultPath() {
         return new EnumhypRunner(
                 "enumhyp-ubuntu",
-                Path.of("C:/Users/jutt/IdeaProjects/ucc-bridge/data")
+                Paths.get("C:/Users/jutt/IdeaProjects/ucc-bridge/data")
         );
     }
 }
